# CMakeList.txt : CMake project for AutoclickerCMake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("AutoclickerCMake")

# Add source to this project's executable.
add_executable (AutoclickerCMake "AutoclickerCMake.cpp" "AutoclickerCMake.h")

# TODO: Add tests and install targets if needed.
