# CMakeList.txt : CMake project for Autoclicker, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Autoclicker")

# Add source to this project's executable.
add_executable (AutoclickerCMake "Autoclicker.cpp" "Autoclicker.h")

# TODO: Add tests and install targets if needed.
